[package]
name = "wasm-time"
version = "0.1.0"
authors = ["kriston"]
edition = "2018"

[lib]
name = "wasm_time"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasm_bench"
path = "bin/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.45"
bitvec = "0.19.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
